--- a/home/index.css
+++ b/home/index.css
@@ -297,7 +297,7 @@ nav{
     background-size: cover;
     background-size: 100% 100%;
     position: relative;
-    margin-top: 5%;
+    /* margin-top: 5%; */
 }
 #meals .overlay{
     width:100%;
