--- a/home/index.css
+++ b/home/index.css
@@ -219,6 +219,76 @@ nav{
     font-size: 30px;
     padding-bottom: 10px;
 }
+
+/* Start Contact Us Section */
+
+#contact-us {
+    height: 480px;
+    padding: 10% 0;
+    background: url(/assets/ContactUs.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+  }
+  #contact-us .container{
+    position: relative;
+  }
+  #contact-us form {
+    width:90%;
+    margin:auto;
+    padding: 40px;
+    margin-top:10%;
+    border-radius: 6px;
+    background-color: white;
+    position: relative;
+  }
+  #contact-us .title {
+    width: 40%;
+    font-size: 15px;
+    text-align: center;
+    height:60px;
+    padding: 15px;
+    margin-bottom: 25px;
+    background-color: #f47120;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    margin-left: 30%;
+    margin-right: 30%;
+    top:-30px;
+  }
+  #contact-us .title h2{
+    color: white;
+  }
+  .field {
+    width: 100%;
+    border: 2px solid rgb(250, 174, 123);
+    font-size: 1.1rem;
+    margin-bottom: 15px;
+    padding: 10px;
+    border-radius: 6px;
+  }
+  
+  #contact-us textarea {
+    min-height: 100px;
+  }
+  
+  #contact-us .btn {
+    padding: 10px;
+    background-color: #f47120;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 20px;
+    border: none;
+    display: block;
+    margin: auto;
+    width:40%;
+    cursor: pointer;
+  }
+  
+
+
+
 @media (min-width:768px){
     #meals .overlay{
         width:100%;
@@ -235,6 +305,16 @@ nav{
     #meals .items .item p{
         font-size: 22px;
     }
+    #contact-us form{
+        width:80%;
+        margin:auto;
+      } 
+      #contact-us .title h2{
+        font-size: 30px;
+      }
+      #contact-us .btn{
+        font-size: 30px;
+      }
 }
 @media (min-width:1024px){
     #meals .overlay{
@@ -249,11 +329,37 @@ nav{
         font-size: 50px;
         padding-bottom: 15px;
     }
+    #contact-us .container{
+        margin-top: -30px;
+      }
+      #contact-us form{
+        width:70%;
+        margin:auto;
+      }
+      #contact-us .title {
+        width:24%;
+        margin-left: 38%;
+        margin-right: 38%;
+      }
+      #contact-us .btn{
+        width: 20%;
+        font-size: 30px;
 }
 @media (min-width:1100px){
     #meals .overlay{
         width:100%;
         height:200px;
+    }
+    #contact-us .container{
+        margin-top: -60px;
+      }
+    }
+    
+    footer {
+      height: auto;
+      width: 100vw;
+      background-color: #f47120;
+      padding-bottom: 30px;
     }
 }
 /* End Meals Section */
