--- a/home/index.css
+++ b/home/index.css
@@ -225,7 +225,7 @@ nav {
 #contact-us {
   height: 480px;
   padding: 10% 0;
-  background: url("/assets/ContactUs.png");
+  background: url("/assets/contactUs.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -259,7 +259,7 @@ nav {
 #contact-us .title h2 {
   color: white;
 }
-.field {
+.name-field, .email-field, .message-field {
   width: 100%;
   border: 2px solid rgb(250, 174, 123);
   font-size: 1.1rem;
@@ -286,7 +286,7 @@ nav {
   cursor: pointer;
 }
 
-.message_thank {
+.message-thank {
   display: none;
   width: 260px;
   height: 40%;
@@ -315,13 +315,13 @@ nav {
   }
 }
 
-.message_thank h1 {
+.message-thank h1 {
   padding-top: 30px;
   color: #f47120;
   font-size: 25px;
 }
 
-.message_thank i {
+.message-thank i {
   font-size: 70px;
   color: #f47120;
 }
@@ -487,16 +487,16 @@ nav {
     font-weight: 500;
   }
 
-  .message_thank {
+  .message-thank {
     width: 535px;
     height: 25%;
     top: 2470px;
   }
-  .message_thank h1 {
+  .message-thank h1 {
     font-size: 35px;
   }
 
-  .message_thank i {
+  .message-thank i {
     font-size: 100px;
   }
 }
@@ -576,16 +576,16 @@ nav {
     font-weight: 500;
     padding-top: 10px;
   }
-  .message_thank {
+  .message-thank {
     width: 710px;
     height: 45%;
     top: 2010px;
   }
-  .message_thank h1 {
+  .message-thank h1 {
     font-size: 45px;
   }
 
-  .message_thank i {
+  .message-thank i {
     font-size: 100px;
   }
 
